--- a/styles/home.css
+++ b/styles/home.css
@@ -24,6 +24,7 @@ html {
   color: white;
   font-size: 1.5em;
   font-family: Arial, Helvetica, sans-serif;
+  font-weight: 550;
 }
 
 .navContainer {
@@ -51,8 +52,8 @@ html {
 }
 
 .contentContainer main img {
-  width: 350px;
-  height: 350px;
+  width: 300px;
+  height: 300px;
   border-radius: 15px;
   box-shadow: 0 0 12px -2px black;
 }
@@ -71,16 +72,23 @@ main img {
 .missionStatement {
   display: flex;
   flex-direction: column;
-  gap: 1.5em;
+  gap: 1em;
 }
 .missionStatement h2 {
   font-size: 2.5em;
   color: white;
-  font-weight: b;
+  font-weight: 550;
 }
 .missionStatement p {
   color: white;
-  font-size: 1.5em;
+  font-size: 1.4em;
+  line-height: 1.3;
+}
+
+.quoteContainer {
+  display: flex;
+  align-items: center;
+  min-height: 40vh;
 }
 
 div .quote {
