--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -24,6 +24,7 @@ html {
   color: white;
   font-size: 1.5em;
   font-family: Arial, Helvetica, sans-serif;
+  font-weight: 550;
 }
 
 .navContainer {
@@ -97,4 +98,5 @@ main {
 p {
   color: white;
   font-family: Arial, Helvetica, sans-serif;
+  line-height: 1.5;
 }
